# NCM-algorithm

./: .gitignore  Dockerfile  README  README.md  base.py  ncm.py  pointwise.py  pointwise.py~  pyproject.toml  rea.py  run.py  setup.py
archive/: logistic_map.py  pw_parallel.py  sampen_ncm.py
bruteforce/: merge_output.py  pw_parallel.py
methods/: bruteforce.py  ncm_basic.py  ncm_mpi.py  ncm_plain.py
ncm/: api.py  matrix.py  ncm.py  ncm_basic.py  rea.py  run.py
ncm/methods/: bruteforce.py  ncm_mpi.py  ncm_plain.py
prepere_plots/: logistic_map.py  loretnz.py  plot_generation_rr.py  plot_generation_synthetic.py  rr_data.txt
testdata/: dane.csv  testcase_0.1k.rea  testcase_10k.rea
testdata/maps/: lorenz.txt  ueda.txt
tests/: cor_and_SE.py  find_region.py  pointwise.py~  run.sh
tests/data/: testcase.rea  testcase_1k.rea
tests/test__correlation_sums/: 00_af_17_0.csv  00_nsr_0_5.csv  test_interface.py  test_methods_ncm.py
tests/test_sample_entropy_ncm/: test_archive_sampen_ncm.py  test_interface.py  test_methods_ncm.py
tests/testdata/: dane.csv  testcase.rea  testcase_0.1k.rea  testcase_10k.rea  testcase_1k.rea
tools/cordim/: cordim.py  dane  do.sh  int_dat.py  slide.py
tools/data/: corsums_100k.gp  corsums_10k.gp  corsums_testcase.gp  logistic_map.dat.cm  logistic_map.dat.cm.entr  logistic_map.dat.tailed  logistic_map.dat.tailed.cm  logistic_map.dat_2.cm.entr  logistic_map.dat_2.tailed  logistic_map.dat_2.tailed.cm  logistic_map.dat_3.77.cm.entr  logistic_map.dat_3.77.tailed  logistic_map.dat_3.77.tailed.cm  sampen_100k.gp  sampen_10k.gp  testcase.rea  (+5 more)
(+26 files in other folders)
