[project]
name = "NCM"
version = "1.0.0"
authors = [
  { name="Sebastian Żurek", email="sebzur@codelab.pl" }, { name="Bartosz Biczuk", email="bbiczuk@gmail.com" },
  { name="Klaudia Wojtiuk ", email="klaudia.wojtiuk.94@gmail.com" }
]
description = "Norm component matrix algorithm for fast calculation of correlation sums"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sebzur/NCM-algorithm"
Issues = "https://github.com/sebzur/NCM-algorithm/issues"